--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
   <!-- Plugins CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/plugins/font-awesome/css/all.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
+  
   <!-- Theme CSS -->
   <link id="theme-style" rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
