--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@
 body {
     font-family: 'Questrial', sans-serif;
     color: $text-color-secondary;
-    background: $smoky-white;
+    background: #e4c7bd;
     font-size: 14px;
     padding: 30px;
     -webkit-font-smoothing: antialiased;
@@ -10,7 +10,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6  {
-    font-weight: 700;
+    font-weight: 400;
 }
 
 a {
