--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 /* ======= Base ======= */
 body {
     font-family: 'Questrial', sans-serif;
-    color: $text-color-secondary;
+    color: black;
     background: #e4c7bd;
     font-size: 14px;
     padding: 30px;
@@ -14,10 +14,10 @@ h1, h2, h3, h4, h5, h6  {
 }
 
 a {
-    color: darken($theme-color, 15%);
+    color: darken(#24292e, 15%);
     &:hover {
         text-decoration: underline;
-        color: darken($theme-color, 30%);
+        color: darken(#24292e, 30%);
     }
     &:focus {
         text-decoration: none;
@@ -29,7 +29,7 @@ p {
 }
 
 .wrapper {
-    background:$theme-color;
+    background:#24292e;
     max-width: 1000px;
     margin: 0 auto;
     position: relative;
@@ -37,7 +37,7 @@ p {
 }
 
 .sidebar-wrapper {
-    background: $theme-color;
+    background: #24292e;
     position: absolute;
     right: 0;
     width: 280px;
@@ -56,7 +56,7 @@ p {
     }
     .name {
         font-size: 32px;
-        font-weight: 900;
+        font-weight: 400;
         margin-top: 0;
         margin-bottom: 10px;
     }
@@ -252,7 +252,7 @@ p {
     }
     .level-bar-inner {
         height: 12px;
-        background: lighten($theme-color, 15%);
+        background: lighten(#24292e, 15%);
     }
 }
 
