--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -256,8 +256,11 @@ p {
     }
 }
 
-
-
+.wide-space {
+    letter-spacing: 3px;
+    margin-left: 2px;
+    font-weight: 600;
+}
 
 .footer {
     padding-top: 30px;
