--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,27 +1,32 @@
 /* ======= Base ======= */
 body {
-    font-family: 'Questrial', sans-serif;
-    color: black;
-    background: #e4c7bd;
-    font-size: 14px;
-    padding: 30px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: "Questrial", sans-serif;
+  color: black;
+  background: #e4c7bd;
+  font-size: 14px;
+  padding: 30px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, h4, h5, h6  {
-    font-weight: 400;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
 }
 
 a {
-    color: darken(#24292e, 15%);
-    &:hover {
-        text-decoration: underline;
-        color: darken(#24292e, 30%);
-    }
-    &:focus {
-        text-decoration: none;
-    }
+  color: darken(#24292e, 15%);
+  &:hover {
+    text-decoration: underline;
+    color: darken(#24292e, 30%);
+  }
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 p {
@@ -29,53 +34,53 @@ p {
 }
 
 .wide-space {
-    letter-spacing: 3px;
-    margin-left: 2px;
-    font-weight: 600;
+  letter-spacing: 3px;
+  margin-left: 2px;
+  font-weight: 600;
 }
 
 .wrapper {
-    background:#24292e;
-    max-width: 1000px;
-    margin: 0 auto;
-    position: relative;
-    @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
+  background: #24292e;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: relative;
+  @include box-shadow(0px 2px 4px rgba(0, 0, 0, 0.1));
 }
 
 .sidebar-wrapper {
-    background: #24292e;
-    position: absolute;
-    right: 0;
-    width: 280px;
-    height: 100%;
-    min-height: 800px;
+  background: #24292e;
+  position: absolute;
+  right: 0;
+  width: 280px;
+  height: 100%;
+  min-height: 800px;
+  color: #fff;
+  a {
     color: #fff;
-    a {
-        color: #fff;
-    }
-    .profile-container {
-        padding: 30px;
-        //background: darken($theme-color, 10%);
-        background: rgba(0, 0, 0, 0.2);
-        text-align: center;
-        color: #fff;
-    }
-    .name {
-        font-size: 32px;
-        font-weight: 400;
-        margin-top: 0;
-        margin-bottom: 10px;
-    }
-    .tagline {
-        color: rgba(256, 256, 256, 0.6);
-        font-size: 16px;
-        font-weight: 400;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-    .profile {
-        margin-bottom: 15px;
-    }
+  }
+  .profile-container {
+    padding: 30px;
+    //background: darken($theme-color, 10%);
+    background: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: #fff;
+  }
+  .name {
+    font-size: 32px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  .tagline {
+    color: rgba(256, 256, 256, 0.6);
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .profile {
+    margin-bottom: 15px;
+  }
 
   .avatar {
     //used for profile image
@@ -100,12 +105,12 @@ p {
       }
     }
     .container-block-title {
-        text-transform: uppercase;
-	letter-spacing: 3px;
-        font-size: 16px;
-        font-weight: 700;
-        margin-top: 0;
-        margin-bottom: 15px;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      font-size: 16px;
+      font-weight: 700;
+      margin-top: 0;
+      margin-bottom: 15px;
     }
     .meta {
       color: rgba(256, 256, 256, 0.6);
@@ -147,130 +152,130 @@ p {
 }
 
 .main-wrapper {
-    background: #fff;
-    padding: 60px;
-    padding-right: 340px;
-    .section-title {
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: 500;
-        color: black;
-        position: relative;
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
-    .section {
-        margin-bottom: 60px;
-    }
+  background: #fff;
+  padding: 60px;
+  padding-right: 340px;
+  .section-title {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 500;
+    color: black;
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  .section {
+    margin-bottom: 60px;
+  }
 
-    .experiences-section, .educations-section {
-        .item {
-            margin-bottom: 30px;
-        }
-    }
-    .upper-row {
-        position: relative;
-        overflow: hidden;
-        margin-bottom: 2px;
-    }
-    .job-title, .degree {
-        color: $text-color;
-        font-size: 16px;
-        margin-top: 0;
-        margin-bottom: 0;
-        font-weight: 500;
-    }
-    .time {
-        position: absolute;
-        right: 0;
-        top: 0;
-        color: #999;
-    }
-    .company, .university {
-        margin-bottom: 10px;
-        color: #999;
+  .experiences-section,
+  .educations-section {
+    .item {
+      margin-bottom: 30px;
     }
   }
-  .upper-row,
-  .second-upper-row {
+  .upper-row {
     position: relative;
     overflow: hidden;
     margin-bottom: 2px;
-    display: flex;
   }
   .job-title,
-  .degree,
-  .cert-title{
+  .degree {
     color: $text-color;
     font-size: 16px;
     margin-top: 0;
     margin-bottom: 0;
     font-weight: 500;
-    flex: 75%;
   }
-  .time,
-  .cert-url {
+  .time {
     position: absolute;
     right: 0;
     top: 0;
-    color: $text-grey;
-    flex: 25%;
+    color: #999;
   }
   .company,
-  .university,
-  .cert-org {
+  .university {
     margin-bottom: 10px;
-    color: $text-grey;
+    color: #999;
   }
+}
+.upper-row,
+.second-upper-row {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 2px;
+  display: flex;
+}
+.job-title,
+.degree,
+.cert-title {
+  color: $text-color;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+  flex: 75%;
+}
+.time,
+.cert-url {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: $text-grey;
+  flex: 25%;
+}
+.company,
+.university,
+.cert-org {
+  margin-bottom: 10px;
+  color: $text-grey;
+}
 
-    .project-title {
-        font-size: 14px;
-	letter-spacing: 1px;
-        font-weight: 600;
-        margin-top: 0;
-        margin-bottom: 5px;
-	color: black;
-    }
-    .item {
-      margin-bottom: 15px;
-    }
-  }
+.project-title {
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin-top: 0;
+  margin-bottom: 5px;
+  color: black;
+}
+.item {
+  margin-bottom: 15px;
+}
 
-    .publication-title {
-        font-size: 16px;
-        font-weight: 400;
-        color: $text-color;
-        margin-bottom: 1px;
-    }
-    .publication-authors {
-        font-style: italic;
-        color: #999;
-        margin-bottom: 1px;
-    }
-    .item {
-      margin-bottom: 15px;
-    }
-  }
+.publication-title {
+  font-size: 16px;
+  font-weight: 400;
+  color: $text-color;
+  margin-bottom: 1px;
+}
+.publication-authors {
+  font-style: italic;
+  color: #999;
+  margin-bottom: 1px;
+}
+.item {
+  margin-bottom: 15px;
 }
 
 .skillset {
-    .item {
-        margin-bottom: 15px;
-        overflow: hidden;
-    }
-    .level-title {
-        font-size: 14px;
-        margin-top: 0;
-        margin-bottom: 12px;
-    }
-    .level-bar {
-        height: 12px;
-        background: $smoky-white;
-    }
-    .level-bar-inner {
-        height: 12px;
-        background: lighten(#24292e, 15%);
-    }
+  .item {
+    margin-bottom: 15px;
+    overflow: hidden;
+  }
+  .level-title {
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 12px;
+  }
+  .level-bar {
+    height: 12px;
+    background: $smoky-white;
+  }
+  .level-bar-inner {
+    height: 12px;
+    background: lighten(#24292e, 15%);
+  }
 }
 
 .footer {
@@ -285,4 +290,3 @@ p {
     color: $heart;
   }
 }
-
